--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,17 @@
-PORT=5000
+EMAIL_PASSWORD='qrxc zgwy lzza wfiz'
+EMAIL_USER='santiagobarlettautn@gmail.com'
+SECRET_KEY='cb2f01c7-a531-4241-b983-c6ca41ffe475'
+FRONTEND_URL=http://localhost:5174
+BACKEND_URL=http://localhost:3000
+
+
+# PORT=5000
 DB_HOST=190.228.29.62
 DB_USER=santiagobarletta
 DB_PASSWORD=Sitiosweb2025
 DB_NAME=cloneslack
 DB_PORT=3306
+
+VITE_URL_API=http://localhost:5000
+
+
