--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,24 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "./src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "dev": "node --watch ./server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
-    "mysql2": "^3.6.0",
-    "cors": "^2.8.5"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.2",
+    "mysql2": "^3.11.4",
+    "nodemailer": "^6.9.16"
   }
 }
