--- a/backend/.env
+++ b/backend/.env
@@ -2,8 +2,7 @@ EMAIL_PASSWORD='qrxc zgwy lzza wfiz'
 EMAIL_USER='santiagobarlettautn@gmail.com'
 SECRET_KEY='cb2f01c7-a531-4241-b983-c6ca41ffe475'
 FRONTEND_URL=https://cloneslack-rho.vercel.app/login
-BACKEND_URL=http://localhost:5000
-
+BACKEND_URL=https://cloneslack-1.onrender.com
 
 # PORT=5000
 DB_HOST=190.228.29.62
@@ -12,6 +11,6 @@ DB_PASSWORD=Sitiosweb2025
 DB_NAME=cloneslack
 DB_PORT=3306
 
-VITE_URL_API=http://localhost:5000
+VITE_URL_API=https://cloneslack-1.onrender.com/api
 
 
