--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 # VITE_URL_API=http://localhost:5000
 
-VITE_URL_API=https://cloneslack-1.onrender.com/api
+VITE_URL_API=https://cloneslack-1.onrender.com
 
