--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 EMAIL_PASSWORD='qrxc zgwy lzza wfiz'
 EMAIL_USER='santiagobarlettautn@gmail.com'
 SECRET_KEY='cb2f01c7-a531-4241-b983-c6ca41ffe475'
-FRONTEND_URL=https://cloneslack-rho.vercel.app/login
+FRONTEND_URL=https://cloneslack-rho.vercel.app
 BACKEND_URL=https://cloneslack-1.onrender.com
 
 # PORT=5000
