--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ EMAIL_PASSWORD='qrxc zgwy lzza wfiz'
 EMAIL_USER='santiagobarlettautn@gmail.com'
 SECRET_KEY='cb2f01c7-a531-4241-b983-c6ca41ffe475'
 FRONTEND_URL=https://cloneslack-rho.vercel.app
-BACKEND_URL=https://cloneslack-9rt3.vercel.app/
+BACKEND_URL=https://cloneslack-9rt3.vercel.app
 
 # PORT=5000
 DB_HOST=190.228.29.62
